--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,29 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
   </head>
+
+  <meta
+    name="description"
+    content="Servicio-fekmar ventas y mantención de exntintores, la seguridad es primero"
+  />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@servicio-fekmar" />
+  <meta name="twitter:creador" content="@richard" />
+  <meta
+    name="twitter:title"
+    content="Servicio de venta y mantenimiento de extintores "
+  />
+  <meta
+    name="twitter:description"
+    content="Servicio-fekmar ventas y mantención de exntintores, la seguridad es primero"
+  />
+  <meta
+    name="twitter:image"
+    content="https://servicio-fekmar.vercel.app/assets/images/servicio_fekmar.jpeg
++2"
+  />
+
   <body class="mat-typography">
     <app-root></app-root>
   </body>
