--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,21 @@
     content="Servicio-fekmar ventas y mantención de exntintores, la seguridad es primero"
   />
 
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://servicio-fekmar.vercel.app" />
+  <meta
+    property="og:title"
+    content="Servicio de venta y mantenimiento de extintores"
+  />
+  <meta
+    property="og:description"
+    content="Servicio Fekmar: ventas y mantención de extintores. ¡La seguridad es lo primero!"
+  />
+  <meta
+    property="og:image"
+    content="https://servicio-fekmar.vercel.app/assets/images/servicio_fekmar.jpeg"
+  />
+
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@servicio-fekmar" />
   <meta name="twitter:creador" content="@richard" />
@@ -38,8 +53,7 @@
   />
   <meta
     name="twitter:image"
-    content="https://servicio-fekmar.vercel.app/assets/images/servicio_fekmar.jpeg
-+2"
+    content="https://servicio-fekmar.vercel.app/assets/images/servicio_fekmar.jpeg"
   />
 
   <body class="mat-typography">
