--- a/src/index.html
+++ b/src/index.html
@@ -35,10 +35,7 @@
     property="og:description"
     content="Servicio Fekmar: ventas y mantención de extintores. ¡La seguridad es lo primero!"
   />
-  <meta
-    property="og:image"
-    content="https://servicio-fekmar.vercel.app/images/servicio_fekmar.jpeg"
-  />
+  <meta property="og:image" content="https://imgur.com/a/eZSBSLh" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@servicio-fekmar" />
@@ -51,10 +48,7 @@
     name="twitter:description"
     content="Servicio-fekmar ventas y mantención de exntintores, la seguridad es primero"
   />
-  <meta
-    name="twitter:image"
-    content="https://servicio-fekmar.vercel.app/images/servicio_fekmar.jpeg"
-  />
+  <meta name="twitter:image" content="https://imgur.com/a/eZSBSLh" />
 
   <body class="mat-typography">
     <app-root></app-root>
