--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
     content="Servicio-fekmar ventas y mantención de exntintores, la seguridad es primero"
   />
 
+  <meta property="og:locale" content="" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://servicio-fekmar.vercel.app" />
   <meta
@@ -35,7 +36,10 @@
     property="og:description"
     content="Servicio Fekmar: ventas y mantención de extintores. ¡La seguridad es lo primero!"
   />
-  <meta property="og:image" content="https://imgur.com/a/eZSBSLh" />
+  <meta
+    property="og:image"
+    content="https://imgur.com/a/servicio-fekmar-eZSBSLh"
+  />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@servicio-fekmar" />
@@ -48,7 +52,10 @@
     name="twitter:description"
     content="Servicio-fekmar ventas y mantención de exntintores, la seguridad es primero"
   />
-  <meta name="twitter:image" content="https://imgur.com/a/eZSBSLh" />
+  <meta
+    name="twitter:image"
+    content="https://imgur.com/a/servicio-fekmar-eZSBSLh"
+  />
 
   <body class="mat-typography">
     <app-root></app-root>
