--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
   />
   <meta
     property="og:image"
-    content="https://imgur.com/a/servicio-fekmar-eZSBSLh"
+    content="https://i.postimg.cc/hj6rfB2Y/servicio-fekmar.jpg"
   />
 
   <meta name="twitter:card" content="summary_large_image" />
@@ -54,7 +54,7 @@
   />
   <meta
     name="twitter:image"
-    content="https://imgur.com/a/servicio-fekmar-eZSBSLh"
+    content="https://i.postimg.cc/hj6rfB2Y/servicio-fekmar.jpg"
   />
 
   <body class="mat-typography">
