--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 
   <meta
     name="description"
-    content="Servicio-fekmar ventas y mantención de exntintores, la seguridad es primero"
+    content="Servicio-fekmar ventas y mantención de extintores, la seguridad es primero"
   />
 
   <meta property="og:locale" content="" />
