--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
   />
   <meta
     name="twitter:description"
-    content="Servicio-fekmar ventas y mantención de extintores, la seguridad es primero"
+    content="Servicio-fekmar ventas y mantención de extintores. ¡La seguridad es lo primero!"
   />
   <meta
     name="twitter:image"
