--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     content="Servicio-fekmar ventas y mantención de extintores, la seguridad es primero"
   />
 
-  <meta property="og:locale" content="" />
+  <meta property="og:locale" content="es_CL" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://servicio-fekmar.vercel.app" />
   <meta
